--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -34,6 +35,7 @@
     "date-fns": "^3.0.0",
     "formik": "^2.4.6",
     "lucide-react": "^0.469.0",
+    "mongoose": "^8.9.5",
     "next": "^14.2.16",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.3",
@@ -42,6 +44,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "react-router-dom": "^7.1.3",
     "recharts": "^2.13.3",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
